Fix dark mode issue

--- a/app/globals.css
+++ b/app/globals.css
@@ -13,13 +13,6 @@
     --font-serif: var(--font-garamond-classico);
 }
 
-@media (prefers-color-scheme: dark) {
-    :root {
-        --background: #0a0a0a;
-        --foreground: #ededed;
-    }
-}
-
 body {
     background: var(--background);
     color: var(--foreground);
